--- a/style.css
+++ b/style.css
@@ -3,12 +3,19 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 
+
 }
 .container{
-   background: #000000;
-   position: absolute;
-width: 100%;
+    /* Personal Portfolio Template */
+
+position: relative;
+width: 1280px;
 height: 700px;
+
+background: #FFFFFF;
+
+   background: #000000;
+
 left: 0px;
 top: 0px;
 
